# ourbot

./: .gitignore  README.md  camserver.py  deploy.py  deploy_old.py  deployourbots.py  deployourbots.sh  getch.py  getreports.py  getreports2.py  network settings  occ.py  readme.md  test_flexonomy.py  todo  todo - test  todo_flex  write2hawkeye.py  write2ourbots.py  write2ourbots.sh
.test/: reports_old.nc  (+3 more)
orocos/HawkEye/: CMakeLists.txt  Makefile  deployHawkEye.ops
orocos/HawkEye/include/HawkEye/: HawkEye-types.hpp
orocos/HawkEye/src/: Circle.cpp  Circle.hpp  HawkEye-component.cpp  HawkEye-component.hpp  HawkEye-plugin.cpp  Obstacle.cpp  Obstacle.hpp  Rectangle.cpp  Rectangle.hpp  Robot.cpp  Robot.hpp
orocos/HawkEye/src/Images/templates/: circlehollow.tiff  circlehollow_high.tiff  cross_high.tiff  crosscircle.tiff  crosscirclerot.tiff  crossrot_high.tiff  star3.tiff
orocos/emperor/Camera/src/: CMakeLists.txt  Camera-component.cpp  Camera-component.hpp  Camera-plugin.cpp
orocos/emperor/HawkEye/calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  calib.xml  calibImages.xml  camera_calibration  cmake_install.cmake  out_camera_data.xml  readme.md  rename_images.py  resize_images.py
orocos/emperor/HawkEye/calibration/cmake/: FindZMQ.cmake
orocos/emperor/HawkEye/calibration/images/: rename_images.py
orocos/emperor/HawkEye/src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Detector.cpp  Detector.hpp  Gui.cpp  Gui.hpp  HawkEye-component.cpp  HawkEye-component.hpp  HawkEye-component2.cpp  HawkEye-component2.hpp  Robot.cpp  Robot.hpp
orocos/ourbot/Communicator/: CMakeLists.txt  manifest.xml  test_communicator.ops  test_communicator1.ops  test_communicator2.ops  test_communicator3.ops
orocos/ourbot/Communicator/cmake/: FindCZMQ.cmake  FindZYRE.cmake
orocos/ourbot/Communicator/include/Communicator/: Communicator-types.hpp
orocos/ourbot/Communicator/src/: CMakeLists.txt  Communicator-component.cpp  Communicator-component.hpp  Communicator-plugin.cpp  Connection.hpp  Connection_old.hpp  Mailbox.hpp
orocos/ourbot/Estimator/: CMakeLists.txt  manifest.xml
orocos/ourbot/Estimator/include/Estimator/: Estimator-types.hpp
orocos/ourbot/Estimator/src/: CMakeLists.txt
orocos/ourbot/Estimator/src/EstimatorInterface/: EstimatorInterface-component.cpp  EstimatorInterface-component.hpp  EstimatorInterface-plugin.cpp
orocos/ourbot/Estimator/src/Kalman/: Kalman-component.cpp  Kalman-component.hpp  kalman_filter.hpp  kalman_kinematic.hpp  kalman_odometry.cpp  kalman_odometry.hpp  kalman_odometry_impl.hpp  kalman_operations.cpp  kalman_operations.hpp
orocos/ourbot/Estimator/src/Kalman/async_kalman/: kalman_odometry_impl.hpp
orocos/ourbot/Estimator/src/KalmanSM/: KalmanSM-component.cpp
orocos/ourbot/EstimatorInterface/: CMakeLists.txt  manifest.xml
orocos/ourbot/EstimatorInterface/include/EstimatorInterface/: EstimatorInterface-types.hpp
orocos/ourbot/EstimatorInterface/src/: CMakeLists.txt
orocos/ourbot/EstimatorInterface/src/DistributedEstimatorInterface/: DistributedEstimatorInterface-component.cpp  DistributedEstimatorInterface-component.hpp
orocos/ourbot/EstimatorInterface/src/EstimatorInterface/: EstimatorInterface-component.cpp  EstimatorInterface-component.hpp
orocos/ourbot/EstimatorInterface/src/ExampleEstimator/: ExampleEstimator-component.cpp  ExampleEstimator-component.hpp
orocos/ourbot/EstimatorInterface/src/Kalman/: Kalman-component.cpp  kalman_kinematic.hpp  kalman_odometry.cpp
orocos/ourbot/EstimatorInterface/src/KalmanSM/: KalmanSM-component.cpp  KalmanSM-component.hpp
orocos/ourbot/EstimatorInterface/src/SimpleEstimator/: SimpleEstimator-component.cpp  SimpleEstimator-component.hpp
orocos/ourbot/MotionPlanning/: CMakeLists.txt  manifest.xml  test_mp.ops
orocos/ourbot/MotionPlanning/include/MotionPlanning/: MotionPlanning-types.hpp
orocos/ourbot/MotionPlanning/src/: CMakeLists.txt
orocos/ourbot/MotionPlanning/src/DistributedMotionPlanning/: DistributedMotionPlanning-component.cpp  DistributedMotionPlanning-component.hpp  formation_ourbots.py  formation_ourbots2.py
orocos/ourbot/MotionPlanning/src/FlexonomyMotionPlanning/: FlexonomyMotionPlanning-component.cpp  FlexonomyMotionPlanning-component.hpp  p2p_flexonomy.py
orocos/ourbot/MotionPlanning/src/FormationMotionPlanning/: FormationMotionPlanning-component.cpp  FormationMotionPlanning-component.hpp  formation_ourbots.py
orocos/ourbot/MotionPlanning/src/MotionPlanning/: FlexonomyMotionPlanning-component.cpp  FlexonomyMotionPlanning-component.hpp  MotionPlanning-component.cpp  MotionPlanning-component.hpp  Problem.hpp  ourbot.py  ourbot2.py  ourbot_flexonomy.py  p2p_flexonomy.py  p2p_ourbot.py
orocos/ourbot/MotionPlanning/src/MotionPlanningDynamicObstacle/: MotionPlanningDynamicObstacle-component.cpp  MotionPlanningDynamicObstacle-component.hpp  p2p_dynobstacle.py
orocos/ourbot/MotionPlanning/src/MotionPlanningInterface/: MotionPlanningInterface-component.cpp  MotionPlanningInterface-component.hpp  MotionPlanningInterface-plugin.cpp  MotionPlanningInterface-service.cpp
orocos/ourbot/MotionPlanning/src/Toolbox/: Makefile  MotionPlanning.hpp
orocos/ourbot/Scanmatcher/: CMakeLists.txt  manifest.xml
orocos/ourbot/Scanmatcher/include/Scanmatcher/: Scanmatcher-types.hpp
orocos/ourbot/Scanmatcher/src/: CMakeLists.txt  Scanmatcher-component.cpp  Scanmatcher-component.hpp  Scanmatcher-plugin.cpp  environment.xml
orocos/ourbot/Scanmatcher/src/Environment/: Circle.cpp  Circle.hpp  Polygon.cpp  Polygon.hpp
orocos/ourbot/Serial/: CMakeLists.txt  manifest.xml
orocos/ourbot/Serial/include/Serial/: Serial-types.hpp
orocos/ourbot/Serial/src/: CMakeLists.txt
orocos/ourbot/Serial/src/GamePad/: GamePad-component.cpp  GamePad-component.hpp  GamePad_cmd.h
orocos/ourbot/Serial/src/RPLidar/: RPLidar-component.cpp  rplidar_cmd.h
orocos/ourbot/Serial/src/TeensyBridge/: TeensyBridge-component.cpp  TeensyBridge-component.hpp  protocol_mavlink.cpp  protocol_mavlink.h  sensor3d.cpp
orocos/ourbot/Serial/src/USBInterface/: USBInterface-component.cpp  USBInterface-component.hpp
(+517 files in other folders)
